# qifu4

./: .gitignore  GEMINI.md  README-backend.md  README-frontend.md  README-k3s-kube-vip.md  README-k3s.md  README-kube-vip-how.md  README-mqtt.md  README.md  ai-generator-code-template.md  frontend-various.7z
backend-py/: .env  .env.example  .gitignore  README-python.md  init.bat  java-analysis-index.md  java-app-code-resource.md  java-base-code-resource.md  java-core-code-resource.md  java-doc-sql-resource.md  java-root-docs-resource.md  pyproject.toml  python-implementation-roadmap.md  python-migration-plan.md  run.bat
backend-py/app/: main.py
backend-py/app/api/: auth.py  dashboard_demo.py  hello.py  menu.py  prog001d0001.py  prog001d0002.py  prog001d0003.py  prog001d0004.py  prog001d0005.py  prog002d0001.py  prog002d0002.py  prog002d0003.py  prog004d0001.py  prog004d0002.py  prog005d0001.py
backend-py/app/aspects/: service_authority.py
backend-py/app/common/: constants.py  context.py  exceptions.py  handlers.py  pagination.py  (+3 more)
backend-py/tests/: test_auth_api.py  test_auth_models.py  test_authority.py  test_clear_system_log_job.py  test_common_contracts.py  test_core_crud.py  test_dashboard_demo_api.py  test_health.py  test_hello_api.py  test_menu_api.py  test_prog001d0001_api.py  test_prog001d0002_api.py  test_prog001d0003_api.py  test_prog001d0004_api.py  test_prog001d0005_api.py  test_prog002d0001_api.py  test_prog002d0002_api.py  test_prog002d0003_api.py  test_prog004d0001_api.py  test_prog004d0002_api.py  test_prog005d0001_api.py  test_security.py
(+855 files in other folders)
