[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qifu4-backend-py"
version = "0.1.0"
description = "Python backend migration for qifu4"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pymysql>=1.1",
  "python-jose[cryptography]>=3.3",
  "bcrypt>=4.0",
  "python-multipart>=0.0.9",
  "apscheduler>=3.10",
  "structlog>=24.1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"

[tool.setuptools.packages.find]
include = ["app*"]

